--- a/doc/gef.tex
+++ b/doc/gef.tex
@@ -1,11 +1,13 @@
-
 \documentclass{article}
 
 % Packages
 \usepackage{algorithm}
 \usepackage{algpseudocodex}
+\usepackage{empheq}
 \usepackage[margin=3.5cm]{geometry}
+\usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage[usestackEOL]{stackengine}
 
 % Common commands and acronyms
 \input{symbols_and_acronyms.tex}
@@ -41,7 +43,7 @@ where $\dot{Q}$ is the rate of heating per unit mass.
 
 In other words, we have a variable
 $\vars = \left[\begin{matrix}\rho & \rho u^1 & \rho u^2 & \rho u^3 & \rho\theta\end{matrix}\right]$
-and 5 equations:
+and 5 equations (please ignore the funny business with $w$ vs $u^3$):
 \begin{align}
 \left( \sqrt{g}\rho u^\nu \right)_{,\nu} &= 0 \\
 \left( \sqrt{g}\rho u^\nu u^1\right)_{,\nu} &=
@@ -54,6 +56,31 @@ and 5 equations:
     \sqrt{g} \rho \left( \frac{\theta_v}{T_v} \right) \frac{\dot{Q}}{c_{pd}}
     \text{.}
 \end{align}
+$\vars$ is defined in a 4-dimensional space $X = \{x^0, x^1, x^2, x^3 \} $ where $x^0$ is
+the time dimension and $x^{1-3}$ are the 3 spatial dimensions.
+
+If we keep the time derivatives on the left and put the fluxes on the right, we get
+\todo{gotta deal with $w/u^3$}
+\begin{empheq}[right = \empheqrbrace\Centerstack{$:= \rhs$}]{align}
+\left( \sqrt{g}\rho \right)_{,0} &= -\left( \sqrt{g}\rho u^i \right)_{,i} \\
+\left( \sqrt{g}\rho u^1\right)_{,0} &=
+    - \left( \sqrt{g}\rho u^i u^1\right)_{,i}
+    - \sqrt{g}h^{1j}p_{,j} -2\sqrt{g} \rho \Gamma^1_{j0} u^j
+    - \sqrt{g} \rho \Gamma^1_{jk}u^ju^k \\
+\left( \sqrt{g}\rho u^2\right)_{,0} &=
+    - \left( \sqrt{g}\rho u^i u^2\right)_{,i}
+    - \sqrt{g}h^{2j}p_{,j} -2\sqrt{g} \rho \Gamma^2_{j0} u^j
+    - \sqrt{g} \rho \Gamma^2_{jk}u^ju^k \\
+\left(\sqrt{g}\rho w\right)_{,0} &=
+    - \left(\sqrt{g}\rho u^i w\right)_{,i}
+    -\sqrt{g}\rho g_r-\sqrt{g} \left(\frac{\partial z}{\partial \eta}\right)^{-1} \frac{\partial p}{\partial\eta} \\
+\left( \sqrt{g}\rho \theta_v \right)_{,0} &=
+    - \left( \sqrt{g}\rho \theta_v u^i \right)_{,i}
+    + \sqrt{g} \rho \left( \frac{\theta_v}{T_v} \right) \frac{\dot{Q}}{c_{pd}}
+    \text{.}
+\end{empheq}
+With $i = 1, 2, 3$, $j = 1, 2$ and $u^0 = 1$. We define $\rhs$ as the entire right-hand side
+of these 5 equations.
 
 \section{Spatial discretization}
 
@@ -123,11 +150,37 @@ So we get
 
 The \fgmres{} preconditioner starts by converting the input vector into a finite volume discretization. \emph{To be completed later.}
 
+The FV grid has the same number of nodes as the DG grid.
+For a DG method with degree $N$, each DG element is subdivided into $N^d$ identical
+FV elements each with one node at its centre, where $d$ is the dimension of the grid. 
+The value of a field at each FV node is taken to be the value of the Lagrange 
+polynomial at the same position in the corresponding DG element.
+\todo{Explain in spatial discretization about Legendre polynomials}
+In Fig.~\ref{fig:elem_transform_cycle}, the upper two squares show the nodal positions
+and subdivision of an order-4 DG element (in 2D) into 4 FV elements.
+
 Once converted, we use the multigrid method on the resulting FV vector.
 
 \textbf{Note:} We are using the weak form of the discontinous Galerkin method,
 which at order 1 is equivalent to a FV method, using a Rusanov solver to reconstruct interface fluxes.
 
+
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\linewidth]{img/elem_organisation}
+    \caption{How the nodes of an element are transformed during a solve step.
+        From upper left, going clockwise: From the DG state, we interpolate nodal
+        values at the position of the FV nodes;
+        from the initial FV discretization, we combine 2x2 elements (computing their 
+        average value) to form a coarser grid;
+        to go back to a finer grid, we set the value of each resulting element to 
+        the value of its initial larger element;
+        to go from FV back to DG, we use the inverse of the transformation from DG 
+        to FV.
+        }
+    \label{fig:elem_transform_cycle}
+\end{figure}
 
 \subsection{Multigrid}\label{sec:multigrid}
 
@@ -143,7 +196,7 @@ On the other levels, it is the residual from the previous (finer) level.
         \State  $\mgsol_L^0 \gets \bm{0}$ \Comment{Initial guess for $\mgsol_L$}
         \Procedure{MG}{$\mgin_l, \mgsol_l^0, l$} \Comment{On first call, $l = L$}
             \State $ \mgsol_l \gets \smoother(\systemmat_l, \mgin_l, \mgsol_l^0, \pseudodt_l) $
-                    \Comment {Smoothe}
+                    \Comment {Smoothe (0 or more times)}
             \If{$l > 0$}
                 \State $ \mgres_l \gets \restrict_l (\mgin_l - \systemmat_l\mgsol_l ) $
                         \Comment{Restrict residual}
@@ -153,6 +206,8 @@ On the other levels, it is the residual from the previous (finer) level.
                 \EndFor
                 \State $ \mgsol_l \gets \mgsol_l + \prolong_l(\mgsol_{l-1}) $ \Comment{Prolong + apply correction}
             \EndIf
+            \State $ \mgsol_l \gets \smoother(\systemmat_l, \mgin_l, \mgsol_l^0, \pseudodt_l) $
+                    \Comment {Smoothe (0 or more times)}
         \EndProcedure
     \end{algorithmic}
 \end{algorithm}
@@ -228,7 +283,8 @@ The smoother becomes:
 
 For the alpha and beta parameters, we take
 \begin{align}
-    \alpha &= \left[\begin{matrix} 0.145 & 0.395 & 1.0 \end{matrix}\right] \\
+    \alpha &= \left[\begin{matrix} 0.145 & 0.395 & 1.0 \end{matrix}\right] 
+    & \todo{\text{should try }\left[\begin{matrix} 0.1481 & 0.4 & 1.0 \end{matrix}\right]}\\
     \beta  &= \left[\begin{matrix} 1.0 & 0.5 & 0.5 \end{matrix}\right]
 \end{align}
 
@@ -246,9 +302,10 @@ Where
 \item $\pseudocfl$ is a multiplicative parameter used to adjust the pseudo time step $\pseudodt$.
     That's the one we have to specify when launching a simulation
 \item $\dt$ is the time step size (in seconds) of the problem we're simulating.
-\item $max(v^i)$ is the maximum velocity along any of the three axes:
+\item $max(v^i)$ is the maximum speed along any of the three axes (in either direction),
+    with $v^i$ the absolute value of the velocity along axis $i$:
     \begin{equation}
-        v^i = \soundspeed \hcontra{i}{i} + u^i
+        v^i = \soundspeed \sqrt{\hcontra{i}{i}} + \left|u^i\right|
         \text{,}
     \end{equation}
     with $c$ the speed of sound, $u^i$ the fluid velocity along direction $i$ and $\hcontra{x}{y}$
@@ -316,6 +373,20 @@ Expanding on all of these, the flux derivatives (spatial derivatives on the LHS)
       + \frac{\partial}{\partial x^2}\left( \sqrt{g}\rho\theta_v u^2 \right)
       + \frac{\partial}{\partial x^3}\left( \sqrt{g}\rho\theta_v u^3 \right)
 \end{align}
+
+\section{Lagrange polynomial interpolation from DG to FV}
+
+In 1 dimension, the value of a field at position $x$ inside a DG element of order $N$
+is defined as
+\begin{equation}
+    L(x) = \sum_1^N e_i l_i(x)
+    \text{,}
+\end{equation}
+where $e_i$ is the value of field at node $i$ of the element, and $l_i$ is the $i^{th}$ basis of
+the Lagrange polynomial.
+In 2 dimensions, we can interpolate in 
+
+Since each dimension of a reference element is identical, 
 
 \glsaddallunused
 \printglossaries
