--- a/doc/cubesphere.tex
+++ b/doc/cubesphere.tex
@@ -40,12 +40,36 @@
 \end{figure}
 \end{frame}
 
-\begin{frame}{Data storage (single variable)}
+\begin{frame}{Solution points}{2D}
+\begin{itemize}
+    \item Each tile is composed of $n$ by $n$ 2D elements
+    \item For a variable, each element contains $d$ by $d$ solution points (degrees of freedom),
+        where $d$ is the degree of the polynomial used for DG discretization
+\end{itemize}
+\begin{figure}
+    \includegraphics[scale=1.0]{img/elem_numbering}
+    \caption{Numbering of solution points within a 2D element.}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Data storage}{Single variable, 2D}
 \begin{itemize}
     \item Data is stored by row \emph{of points}, not elements
 \end{itemize}
 \begin{figure}
-    \includegraphics[scale=0.8]{img/variable_storage}
+    \includegraphics[scale=0.7]{img/variable_storage}
+    \caption{Each row in the data array is made by concatenating the corresponding row of solution points of
+             each element in a certain row of that tile (along axis $i$). Contiguous rows are for a single variable.}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Data storage}{3D}
+\begin{itemize}
+    \item In 3D, data is stored by horizontal (2D) planes
+    \item Each plane has a "thickness" of one solution point
+\end{itemize}
+\begin{figure}
+    \includegraphics[scale=1.1]{img/3d_storage}
 \end{figure}
 \end{frame}
 
