added reu paper results as well

--- a/Partial-CNN.ipynb
+++ b/Partial-CNN.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Summary\n",
     "\n",
-    "A CNN-based autoencder neural architecture, similar to UNET but with no skip connections, to predict the state changes of the (colliding) gaussian bubbles."
+    "A CNN-based autoencder neural architecture, to predict the state (temperature) changes of the (colliding) gaussian bubbles."
    ]
   },
   {
